Menta themes GTK3: fix blurred window controls icons

--- a/desktop-themes/Menta/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/Menta/gtk-3.0/gtk-widgets.css
@@ -2468,13 +2468,11 @@ GtkCheckButton.text-button, GtkRadioButton.text-button {
  ***************/
 .titlebar, GtkCalendar.header,
 .header-bar {
-	border-width: 0px 0px 0px 0px;
+	border-width: 0 0 1px;
 	border-style: solid;
 	border-color: shade(@borders, 0.90);
-
 	box-shadow: inset 0 -1px shade(@wm_bg_b, 0.95);
 	background-color: @theme_bg_color;
-
 	padding: 6px;
 }
 
@@ -4325,7 +4323,9 @@ GtkModelButton.button.flat:selected {
  *******/
 .titlebar {
     text-shadow: 0 1px @wm_title_shadow;
-    background-image: none;
+    background-image: linear-gradient(to bottom,
+                                      @wm_bg_a,
+                                      @wm_bg_b);
     border-radius: 6px 6px 0px 0px;
     box-shadow: inset 0 -1px alpha(@theme_base_color, 0.4);
     border-color: @borders;
@@ -4364,17 +4364,25 @@ GtkModelButton.button.flat:selected {
 }
 
 .titlebar .titlebutton {
+    color: @wm_title;
+    padding: 2px 6px 3px 3px;
+    border: none;
+    border-image: none;
     /* fake request for hardcoded icons,
      to avoid usage of regular window-close button*/
     -gtk-icon-style: requested;
-    color: @wm_title;
-    padding: 4px;
+}
+
+.titlebar .titlebutton:hover {
+    border: none;
     border-image: none;
 }
 
-.titlebar .titlebutton:active {
-/*    border: none;
-    border-image: none;*/
+.titlebar .titlebutton:active,
+.titlebar .titlebutton:checked,
+.titlebar .titlebutton:checked:checked {
+    border: none;
+    border-image: none;
 }
 
 .titlebar .titlebutton:backdrop {
